style public-component

--- a/src/app/components/vertical-stats/vertical-stats.component.scss
+++ b/src/app/components/vertical-stats/vertical-stats.component.scss
@@ -1,6 +1,7 @@
 .card-container {
-  width: 300px;
-  padding: 70px 30px;
+  width: 270px;
+  padding: 70px 20px;
+  height: 100%;
 
   .images-box {
     width: 45px;
