--- a/src/app/components/map-box/map-box.component.scss
+++ b/src/app/components/map-box/map-box.component.scss
@@ -70,3 +70,19 @@
     }
   }
 }
+
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgb(230, 230, 230);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(131, 131, 131);
+  border-radius: 20px;
+  height: 2px;
+}
+
