--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -15,7 +15,7 @@
           <img src="../../../assets/images/Rectangle 531.png" alt="" style="width: 100%;">
         </div>
         <div class="set-12 infohldr">
-          <p class="card-title">Documento madre 00</p>
+          <p class="card-title">MATRIZ CIUDADANA</p>
           <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
           <span class="card-description link">Leer más</span>
         </div>
@@ -28,9 +28,10 @@
       </div>
     </div>
     <div class="right">
-      <div class="main shadow"></div>
+      <div class="main-box">
+        <div class="main shadow"></div>
+      </div>
       <div class="middle">
-        <div class="title">Derechos humanos</div>
         <div class="select">
           <select required>
             <option value="volvo">Municipio 1</option>
@@ -39,12 +40,10 @@
             <option value="audi">Municipio 4</option>
           </select>
         </div>
-        <div class="button">
-          <button type="button">Ver Subcategorías</button>
-        </div>
       </div>
       <div class="bottom">
-          <div class="spider-chart chart" ></div>
+          <div class="vertical-stats"></div>
+          <div class="spider-chart chart"></div>
           <div class="top10-list"></div>
       </div>
     </div>
