montaje de datos en front end

--- a/src/app/components/add-document-layout/add-document-layout.component.scss
+++ b/src/app/components/add-document-layout/add-document-layout.component.scss
@@ -1,4 +1,6 @@
 :host {
+  min-height: 170px;
+
   .dialog-head {
     display: flex;
     align-items: center;
@@ -61,11 +63,39 @@
 
     .ctrls {
       text-align: right;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      * {
+        margin: 0;
+      }
+
+      mat-spinner {
+        margin-left: 20px;
+      }
+
+      button {
+        margin-left: 10px;
+      }
+
+      button:first-child {
+        margin-left: 0;
+      }
     }
   }
 
   .file-hldr {
     font-weight: bold;
     font-style: italic;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
