--- a/src/app/components/add-document-layout/add-document-layout.component.html
+++ b/src/app/components/add-document-layout/add-document-layout.component.html
@@ -3,7 +3,7 @@
     <h3 class="txt-left">{{document.title}}</h3>
     <p class="bycopy">
       <i>
-        <small>By: {{document.created_by.firstname}} {{document.created_by.lastname}}</small>
+        <small>By: {{document.createdBy.firstname}} {{document.createdBy.lastname}}</small>
       </i>
     </p>
   </div>
@@ -15,9 +15,13 @@
   </div>
 </div>
 
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner diameter="50"></mat-spinner>
+</div>
+
 <div class="set-12 dialog-body" *ngIf="isDataAvailable">
-  <input type="file" #file (change)="onFileSelected($event)">
-  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true">
+  <input type="file" #file (change)="onFileSelected($event)" multiple>
+  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
     <mat-step [stepControl]="stepOneFormGroup">
       <ng-template matStepLabel>
         <small>Agrega una descripción</small>
@@ -38,17 +42,13 @@
           </div>
         </form>
         <div class="set-12 txt-right">
-          <button type="button" mat-button color="primary" matStepperNext
+          <button type="button" mat-raised-button color="primary" matStepperNext
             [disabled]="stepOneFormGroup.invalid">Siguiente</button>
         </div>
       </div>
 
       <div class="set-12 file-hldr" *ngIf="stepOneFormGroup.value.file != null">
         <small>{{stepOneFormGroup.value.file.name}}</small>
-        <!-- <button type="button" mat-icon-button color="primary" matTooltip="Eliminar imágen" matTooltpClass="tooltip"
-          matTooltipPosition="right" (click)="clearFile()">
-          <mat-icon>cancel</mat-icon>
-        </button> -->
       </div>
     </mat-step>
 
@@ -59,14 +59,14 @@
       <div class="set-12 step-content">
         <div class="set-12 tools">
           <button type="button" (click)="toggleCategoryField()">
-            <span *ngIf="!new_category">Agregar categoría</span>
-            <mat-icon *ngIf="!new_category">add_circle</mat-icon>
-            <span *ngIf="new_category">Cancelar</span>
-            <mat-icon *ngIf="new_category">cancel</mat-icon>
+            <span *ngIf="!addNewCategory">Agregar categoría</span>
+            <mat-icon *ngIf="!addNewCategory">add_circle</mat-icon>
+            <span *ngIf="addNewCategory">Cancelar</span>
+            <mat-icon *ngIf="addNewCategory">cancel</mat-icon>
           </button>
         </div>
 
-        <div class="set-12" *ngIf="new_category">
+        <div class="set-12" *ngIf="addNewCategory">
           <div class="set-6">&nbsp;</div>
           <div class="set-6">
             <form [formGroup]="addCategoryFormGroup" (submit)="onCreateCategory(addCategoryFormGroup)">
@@ -107,11 +107,12 @@
         </div>
 
         <div class="set-12 ctrls">
-          <button type="button" mat-button color="primary" matStepperPrevious>Atras</button>
-          <button type="button" mat-button color="accent"
-            [disabled]="stepOneFormGroup.invalid && stepTwoFormGroup.invalid" (click)="onCreateLayout()">
+          <button type="button" mat-raised-button color="primary" matStepperPrevious>Atras</button>
+          <button type="button" mat-raised-button color="accent" [disabled]="stepTwoFormGroup.invalid || isSubmitted"
+            (click)="onCreateLayout()">
             <span>Guardar</span>
           </button>
+          <mat-spinner diameter="20" *ngIf="isSubmitted"></mat-spinner>
         </div>
       </div>
     </mat-step>
