--- a/src/app/components/vertical-stats/vertical-stats.component.scss
+++ b/src/app/components/vertical-stats/vertical-stats.component.scss
@@ -1,8 +1,9 @@
 .card-container {
-  width: 270px;
-  padding: 70px 20px;
-  height: 100%;
 
+  width: 100%;
+  padding: 105px 5px;
+  background-color: white;
+  border-radius: 5px;
   .images-box {
     width: 45px;
     padding: 10px;
