--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,6 +162,33 @@ table {
   clear: both;
 }
 
+.col-rgt {
+  padding-right: 30px;
+}
+.col-rgt-1 {
+  padding-right: 10px;
+}
+
+.mt-1{
+  margin-top: 10px;
+}
+
+.mt-2{
+  margin-top: 20px;
+}
+
+.mt-3{
+  margin-top: 30px;
+}
+
+.mt-4{
+  margin-top: 40px;
+}
+
+.mt-5{
+  margin-top: 40px;
+}
+
 .txt-left {
   text-align: left !important;
 }
