--- a/src/app/components/horizontal-stats/horizontal-stats.component.scss
+++ b/src/app/components/horizontal-stats/horizontal-stats.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 50px 10px;
   margin: 0px auto;
-  height: 120px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,14 +18,15 @@
   }
 
   .texts-box {
-    text-align: center;
+    text-align: start;
+    margin-left: 10px;
     .name {
       font-size: 16px;
       font-weight: 400;
       letter-spacing: 0.5px;
     }
     .amount {
-      font-size: 30px;
+      font-size: 25px;
       font-weight: 500;
     }
   }
