--- a/src/app/components/top10-list/top10-list.component.scss
+++ b/src/app/components/top10-list/top10-list.component.scss
@@ -1,5 +1,5 @@
 :host {
-  min-width: 500px;
+  // min-width: 500px;
 }
 
 .mat-line {
@@ -11,13 +11,21 @@
 
 .container {
   background-color: white;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
 }
-.container h4 {
+.container {
   margin: 0;
-  padding-left: 15px;
+  padding: 25px 10px;
+  .title {
+    padding-left: 15px;
+    font-weight: 500;
+    font-size: 18px;
+  }
+  .name {
+    font-size: 14px;
+  }
 }
 .progress-bar {
   background-color: #dbdbdb;
@@ -35,5 +43,5 @@ mat-list-item {
 }
 .mat-list-base .mat-list-item.mat-3-line,
 .mat-list-base .mat-list-option.mat-3-line {
-  height: 50px;
+  height: 45px;
 }
