--- a/src/app/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/components/vertical-stats/vertical-stats.component.html
@@ -1,26 +1,24 @@
-<mat-card class="card-container"
-  ><mat-list>
-    <mat-list-item>
-      <div class="set-12">
-        <div class="set-3 images-box green-icon-color">
-          <img src="../../../assets/images/PANDOlogo.png" alt="" />
-        </div>
-        <div class="set-8 texts-box">
-          <p class="name">Soluciones</p>
-          <p class="amount">{{ solutionsTotal }}</p>
-        </div>
+<mat-list class="card-container shadow">
+  <mat-list-item>
+    <div class="set-12">
+      <div class="set-3 images-box green-icon-color">
+        <img src="../../../assets/images/PANDOlogo.png" alt="" />
       </div>
-    </mat-list-item>
-    <mat-list-item style="margin-top: 50px">
-      <div class="set-12">
-        <div class="set-3 images-box red-icon-color">
-          <img src="../../../assets/images/PANDOlogo.png" alt="" width="42" />
-        </div>
-        <div class="set-8 texts-box">
-          <p class="name">Problemáticas</p>
-          <p class="amount">{{ problemsTotal }}</p>
-        </div>
+      <div class="set-8 texts-box">
+        <p class="name">Soluciones</p>
+        <p class="amount">{{ solutionsTotal }}</p>
       </div>
-    </mat-list-item>
-  </mat-list></mat-card
->
+    </div>
+  </mat-list-item>
+  <mat-list-item style="margin-top: 50px">
+    <div class="set-12">
+      <div class="set-3 images-box red-icon-color">
+        <img src="../../../assets/images/PANDOlogo.png" alt="" width="42" />
+      </div>
+      <div class="set-8 texts-box">
+        <p class="name">Problemáticas</p>
+        <p class="amount">{{ problemsTotal }}</p>
+      </div>
+    </div>
+  </mat-list-item>
+</mat-list>
