--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -1,4 +1,4 @@
-<div class="set-12">
+<div class="container"  >
 
   <breadcrumbs-component>
     <li class="breadcrumb-item">Perfil</li>
@@ -7,31 +7,27 @@
       
   </breadcrumbs-component>
 
-  <div class="layout">
-    <div class="left">
-      <mat-card class="set-12 doc-description">
-        <div class="set-12 imghldr">
+  <div class="set-12" style="padding-bottom: 100px">
+    <div class="set-4 col-rgt">
+      <mat-card class="doc-description">
+        <div class="imghldr">
           <!-- <mat-icon>panorama</mat-icon> -->
           <img src="../../../assets/images/Rectangle 531.png" alt="" style="width: 100%;">
         </div>
-        <div class="set-12 infohldr">
+        <div class="infohldr">
           <p class="card-title">MATRIZ CIUDADANA</p>
           <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
           <span class="card-description link">Leer más</span>
         </div>
       </mat-card>
-      <div class="set-12" style="margin-top: 10px;">
-        <div class="horizontal-stats"></div>
-      </div>
-      <div class="set-12" style="margin-top: 10px;">
-        <div class="app-map-box"></div>
-      </div>
+      <div class="horizontal-stats mt-2"></div>
+      <div class="app-map-box mt-2"></div>
     </div>
-    <div class="right">
+    <div class="set-8">
       <div class="main-box">
         <div class="main shadow"></div>
       </div>
-      <div class="middle">
+      <div class="mt-2">
         <div class="select">
           <select required>
             <option value="volvo">Municipio 1</option>
@@ -41,44 +37,20 @@
           </select>
         </div>
       </div>
-      <div class="bottom">
+      <div class="set-12 mt-2 col-rgt">
+        <div class="set-3 col-rgt-1">
           <div class="vertical-stats"></div>
+        </div>
+        <div class="set-5 col-rgt-1">
           <div class="spider-chart chart"></div>
+        </div>
+        <div class="set-4">
           <div class="top10-list"></div>
+        </div>
       </div>
     </div>
-
-
   </div>
-  
-  <!-- <div class="set-3 col-lft">
-    <mat-card class="set-12 doc-description">
-      <div class="set-12 imghldr">
-        <mat-icon>panorama</mat-icon>
-        <img src="../../../assets/images/Rectangle 531.png" alt="" style="width: 100%;">
-      </div>
-      <div class="set-12 infohldr">
-        <p class="card-title">Documento madre 00</p>
-        <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <span class="card-description link">Leer más</span>
-      </div>
-    </mat-card>
-    <div class="set-12" style="margin-top: 10px;">
-      <div class="horizontal-stats"></div>
-    </div>
-  </div> -->
-  <!-- <div class="set-3 inner-container">
-    <div class="spider-chart chart" ></div>
-  </div>
-
-  <div class="set-6 inner-container">
-    <div class="vertical-stats"></div>
-  </div>
-
-  <div class="set-6 inner-container">
-    <div class="top10-list"></div>
-  </div> -->
-  <!-- <top10-list></top10-list> -->
-  <!-- <vertical-stats-component ></vertical-stats-component> -->
-  <!-- <horizontal-stats-component></horizontal-stats-component> -->
 </div>
+
+
+
