transform top10-list to receive props

--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -45,7 +45,7 @@
           <div class="spider-chart chart"></div>
         </div>
         <div class="set-4">
-          <div class="top10-list"></div>
+          <top10-list [data]="items"></top10-list>
         </div>
       </div>
     </div>
