--- a/src/app/documents/selected-public-document/selected-public-document.component.html
+++ b/src/app/documents/selected-public-document/selected-public-document.component.html
@@ -44,8 +44,8 @@
         </div>
       </div>
       <div class="bottom">
-          <div class="spider-chart chart" ></div>
-          <div class="top10-list"></div>
+          <spider-chart ></spider-chart>
+          <top10-list [data]="items"></top10-list>
       </div>
     </div>
 
