Add subcategory page

--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -8,7 +8,7 @@
   </breadcrumbs-component>
 
   <div class="set-12" style="padding-bottom: 100px">
-    <div class="set-4 col-rgt">
+    <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
           <!-- <mat-icon>panorama</mat-icon> -->
@@ -37,12 +37,12 @@
           </select>
         </div>
       </div>
-      <div class="set-12 mt-2 col-rgt">
+      <div class="set-12 mt-2 col-rgt-3">
         <div class="set-3 col-rgt-1">
           <div class="vertical-stats"></div>
         </div>
         <div class="set-5 col-rgt-1">
-          <div class="spider-chart chart"></div>
+          <spider-chart></spider-chart>
         </div>
         <div class="set-4">
           <top10-list [data]="items"></top10-list>
