--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -1,10 +1,8 @@
-<div class="container"  >
-
+<div class="container">
   <breadcrumbs-component>
     <li class="breadcrumb-item">Perfil</li>
-      
+
     <li>Documentos</li>
-      
   </breadcrumbs-component>
 
   <div class="set-12" style="padding-bottom: 100px">
@@ -12,11 +10,18 @@
       <mat-card class="doc-description">
         <div class="imghldr">
           <!-- <mat-icon>panorama</mat-icon> -->
-          <img src="../../../assets/images/Rectangle 531.png" alt="" style="width: 100%;">
+          <img
+            src="../../../assets/images/Rectangle 531.png"
+            alt=""
+            style="width: 100%"
+          />
         </div>
         <div class="infohldr">
           <p class="card-title">MATRIZ CIUDADANA</p>
-          <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+          <p class="card-description">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry
+          </p>
           <span class="card-description link">Leer más</span>
         </div>
       </mat-card>
@@ -51,6 +56,3 @@
     </div>
   </div>
 </div>
-
-
-
