--- a/src/app/documents/category-public-document/category-public-document.component.html
+++ b/src/app/documents/category-public-document/category-public-document.component.html
@@ -47,11 +47,11 @@
       </div>
       <div class="bottom">
         <span class="vert-stats">
-          <div class="vertical-stats"></div>
+          <vertical-stats></vertical-stats>
         </span>
 
-        <div class="spider-chart chart"></div>
-        <div class="top10-list"></div>
+        <spider-chart ></spider-chart>
+        <top10-list [data]="items"></top10-list>
       </div>
     </div>
   </div>
