--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -44,7 +44,7 @@
       </div>
       <div class="set-12 mt-2 col-rgt-3">
         <div class="set-3 col-rgt-1">
-          <div class="vertical-stats"></div>
+          <vertical-stats></vertical-stats>
         </div>
         <div class="set-5 col-rgt-1">
           <spider-chart></spider-chart>
