--- a/src/app/documents/subcategory-document/subcategory-document.component.html
+++ b/src/app/documents/subcategory-document/subcategory-document.component.html
@@ -10,6 +10,7 @@
     </div>
     <div class="set-6 txt-right users-container">
       <p>Usuarios destacados</p>
+      <featured-users></featured-users>
     </div>
   </div>
 
