fix vertical component style

--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -42,11 +42,11 @@
           </select>
         </div>
       </div>
-      <div class="set-12 mt-2 col-rgt-3">
-        <div class="set-3 col-rgt-1">
+      <div class="set-12 mt-2">
+        <div class="set-3 col-rgt-2">
           <vertical-stats></vertical-stats>
         </div>
-        <div class="set-5 col-rgt-1">
+        <div class="set-5 col-rgt-2">
           <spider-chart></spider-chart>
         </div>
         <div class="set-4">
