--- a/src/app/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/components/vertical-stats/vertical-stats.component.html
@@ -4,7 +4,7 @@
       <div class="set-3 images-box green-icon-color">
         <img src="../../../assets/images/PANDOlogo.png" alt="" />
       </div>
-      <div class="set-8 texts-box">
+      <div class="texts-box">
         <p class="name">Soluciones</p>
         <p class="amount">{{ solutionsTotal }}</p>
       </div>
@@ -15,7 +15,7 @@
       <div class="set-3 images-box red-icon-color">
         <img src="../../../assets/images/PANDOlogo.png" alt="" width="42" />
       </div>
-      <div class="set-8 texts-box">
+      <div class="texts-box">
         <p class="name">Problemáticas</p>
         <p class="amount">{{ problemsTotal }}</p>
       </div>
