--- a/src/app/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/components/vertical-stats/vertical-stats.component.html
@@ -2,7 +2,7 @@
   <mat-list-item>
     <div class="set-12">
       <div class="set-3 images-box green-icon-color">
-        <img src="../../../assets/images/PANDOlogo.png" alt="" />
+        <img src="../../../assets/images/stats.svg" alt="" />
       </div>
       <div class="texts-box">
         <p class="name">Soluciones</p>
@@ -13,7 +13,7 @@
   <mat-list-item style="margin-top: 50px">
     <div class="set-12">
       <div class="set-3 images-box red-icon-color">
-        <img src="../../../assets/images/PANDOlogo.png" alt="" width="42" />
+        <img src="../../../assets/images/danger.svg" alt="" width="42" />
       </div>
       <div class="texts-box">
         <p class="name">Problemáticas</p>
