--- a/src/app/components/avatars-row/avatars-row.component.html
+++ b/src/app/components/avatars-row/avatars-row.component.html
@@ -1,8 +1,8 @@
 <div class="avatars-row">
   <div class="title">
-    <span> Gestiona </span>
-
-    <mat-icon> manage_accounts</mat-icon>
+    <span> {{ title }} </span>
+    
+    <mat-icon *ngIf="showIcon"> manage_accounts</mat-icon>
   </div>
 
   <div class="avatars-list">
