--- a/src/app/components/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/breadcrumbs/breadcrumbs.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    margin: 0;
     margin-bottom: 1em;
     margin-top: 0;
     padding: 0;
