--- a/src/app/components/avatars-row/avatars-row.component.scss
+++ b/src/app/components/avatars-row/avatars-row.component.scss
@@ -12,6 +12,13 @@
     margin-right: 10pt;
     min-width: 130px;
     text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    * {
+      margin: 0;
+    }
 
     mat-icon {
       color: #306eff;
