--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -1,13 +1,15 @@
-<div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
 
+
+<div class="set-12" *ngIf="isDataAvailable">
   <breadcrumbs-component>
     <li class="breadcrumb-item">Perfil</li>
-      
     <li>Documentos</li>
-      
     <li>{{document.title}}</li>
   </breadcrumbs-component>
-  
+
   <div class="set-3 col-lft">
     <mat-card class="set-12 doc-description">
       <div class="set-12 imghldr">
@@ -16,12 +18,12 @@
 
       <div class="set-12 infohldr">
         <p class="card-title">{{document.title}}</p>
-        <p class="card-description">{{document.description || "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in vestibulum ex. Nullam viverra venenatis ipsum, eget lobortis nisi tempus vel. Donec ut scelerisque nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed non purus feugiat lectus egestas rutrum quis vitae nisi. Sed orci mi, mollis id turpis eget, sodales malesuada diam. Ut blandit, est et malesuada euismod, sem est tristique tortor, non varius dolor orci in metus. Vivamus diam metus, malesuada dapibus turpis id, consequat tempor purus. Etiam elit justo, iaculis a tortor nec, pretium cursus ante."}}</p>
-        <span class="card-description link">Leer más</span>
-
-        
+        <p class="card-description" *ngIf="document.description != null">{{document.description}}</p>
+        <button type="button" class="toolbtn" *ngIf="document.description == null">
+          <small>Agregar descripción</small>
+        </button>
+        <!-- <span class="card-description link" *ngIf="document.description != null">Leer más</span> -->
         <avatars-row></avatars-row>
-
       </div>
 
     </mat-card>
@@ -32,9 +34,9 @@
       <div class="set-4">
         <mat-form-field appearance="outline">
           <mat-label>Cobertura</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let option of document.coverage">
-              <small>{{option.name}}</small>
+          <mat-select [value]="document.coverage[0]._id">
+            <mat-option *ngFor="let option of document.coverage" [value]="option._id">
+              <small>{{option.name | titlecase}}</small>
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -131,80 +133,85 @@
     <div class="set-12 category-list">
       <mat-card class="set-12">
         <p class="title">Categorias</p>
-
         <!-- TABLE -->
-        <table mat-table [dataSource]="categories" class="categories-table">
+        <table mat-table [dataSource]="layouts" class="categories-table">
           <!-- NAME Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-              <div *ngIf="editingRowId == element.id; else editingMode" class="editing">
-                  <input class="text" type="text" value="{{element.name}}" #editRowName />
-                  
-                  <span (click)="saveName()">
-                    <mat-icon>check_circle</mat-icon>
-                  </span>
-              
+            <th mat-header-cell *matHeaderCellDef>Categoría</th>
+            <td mat-cell *matCellDef=" let element">
+              <!-- <div *ngIf="editingRowId == element.id; else editingMode" class="editing">
+                <input class="text" type="text" value="{{element.category.name}}" #editRowName />
+                <span (click)="saveName()">
+                  <mat-icon>check_circle</mat-icon>
+                </span>
               </div>
 
               <ng-template #editingMode>
                 <div>
-
                   <span class="text">
                     {{element.name}}
                   </span>
-                  
                   <span (click)="handleEditing(element.id)">
                     <mat-icon>edit</mat-icon>
                   </span>
                 </div>
-              </ng-template>
+              </ng-template> -->
+              <strong>{{element.category.name}}</strong>
             </td>
           </ng-container>
 
           <!-- USERS Column -->
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef> Usuarios </th>
-            <td mat-cell *matCellDef="let element" (click)="linkCategories(element.id)"> {{element.users}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.users || 'NA'}} </td>
           </ng-container>
 
           <!-- Interacions Column -->
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef> Interacciones</th>
-            <td mat-cell *matCellDef="let element" (click)="linkCategories(element.id)"> {{element.interactions}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.interactions || 'NA'}} </td>
           </ng-container>
 
           <!-- SOLUTIONS Column -->
           <ng-container matColumnDef="solutions">
             <th mat-header-cell *matHeaderCellDef> Soluciones</th>
-            <td mat-cell *matCellDef="let element"> {{element.solutions}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.solutions || 'NA'}} </td>
           </ng-container>
 
           <!-- PROBLEMS Column -->
           <ng-container matColumnDef="problems">
             <th mat-header-cell *matHeaderCellDef> Problemas</th>
-            <td mat-cell *matCellDef="let element"> {{element.problems}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.problems || 'NA'}} </td>
           </ng-container>
 
           <!-- RANKING Column -->
           <ng-container matColumnDef="ranking">
             <th mat-header-cell *matHeaderCellDef> Ranking</th>
-            <td mat-cell *matCellDef="let element"> {{element.ranking}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.ranking || 'NA'}} </td>
           </ng-container>
 
           <!-- ACTIONS Column -->
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let element"> 
-              <button mat-icon-button>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
                 <mat-icon>more_vert</mat-icon>
-              </button>   
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                  <mat-icon>edit</mat-icon>
+                  <small>Editar</small>
+                </button>
+                <button mat-menu-item (click)="linkCategories(element._id)">
+                  <mat-icon>launch</mat-icon>
+                  <small>Abrir</small>
+                </button>
+              </mat-menu>
             </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="categoriesDisplayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: categoriesDisplayedColumns;"></tr>
-
         </table>
 
         <!-- <div class="set-12" *ngFor="let layer of layout">
