--- a/src/app/documents/single-document/single-document.component.scss
+++ b/src/app/documents/single-document/single-document.component.scss
@@ -29,6 +29,14 @@
 
   .infohldr {
     padding: 20px;
+
+    .toolbtn {
+      transition: all .2s linear;
+    }
+
+    .toolbtn:hover {
+      color: #306EFF;
+    }
   }
 
   .card-title {
@@ -55,7 +63,7 @@
 
     mat-icon {
       font-size: 14pt !important;
-      color: #fff;        
+      color: #fff;
     }
   }
 
@@ -112,7 +120,7 @@
 
   .info-lists {
     padding: 1.5em;
-     
+
     p.list-title {
       display: flex;
       align-items: center;
@@ -128,6 +136,7 @@
         &.icon-insights {
           color: #20C588;
         }
+
         &.icon-warnings {
           color: #E98282;
         }
@@ -177,63 +186,90 @@
     /* CATEGORIES TABLE */
     .categories-table {
 
+      // tr {
+
+      //   th:first-child,
+      //   td:first-child {
+      //     text-align: left !important;
+      //   }
+      // }
+
+      th.mat-header-cell:first-of-type {
+        padding: 0 !important;
+      }
+
+      tr:last-child {
+        .mat-cell {
+          border: 0 !important;
+        }
+      }
+
       .mat-cell {
         padding: 0.5em 0;
       }
 
-      .mat-cell.mat-column-name {
-        // min-width: 100px !important;
-        width: 200px !important;
+      // .mat-cell.mat-column-name {
+      //   // min-width: 100px !important;
+      //   width: 200px !important;
 
-        div {
-          border-radius: 1.5em;
-          padding: 0.5em 0.8em;
-          text-transform: capitalize;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          transition: all 350ms linear;
-          border: 1px solid transparent;
-          cursor: text;
-
-        
-          .text {
-            font-size: 1.1em;
-          }
-
-          span {
-            margin: 0;
-          }
-
-          mat-icon {
-            font-size: 15pt;
-          }
-          
-          &:hover, &.editing {
-            background-color: #CEDDFF;
-            border-color:  #306EFF;
-          }
+      //   div {
+      //     border-radius: 1.5em;
+      //     padding: 0.5em 0.8em;
+      //     text-transform: capitalize;
+      //     display: flex;
+      //     justify-content: space-between;
+      //     align-items: center;
+      //     transition: all 350ms linear;
+      //     border: 1px solid transparent;
+      //     cursor: text;
 
 
-          &.editing {
-            background-color: #e8e8e8;
+      //     .text {
+      //       font-size: 1.1em;
+      //     }
 
-            mat-icon {
-              color: #20C588;
-              cursor: pointer;
-            }
-          }
-        }
-        // display: inline-block;
-      }
-      
+      //     span {
+      //       margin: 0;
+      //     }
+
+      //     mat-icon {
+      //       font-size: 15pt;
+      //     }
+
+      //     &:hover,
+      //     &.editing {
+      //       background-color: #CEDDFF;
+      //       border-color: #306EFF;
+      //     }
+
+
+      //     &.editing {
+      //       background-color: #e8e8e8;
+
+      //       mat-icon {
+      //         color: #20C588;
+      //         cursor: pointer;
+      //       }
+      //     }
+      //   }
+
+      //   // display: inline-block;
+      // }
+
       .mat-column-actions {
         width: 50px;
         padding-right: 0;
         text-align: right;
       }
-
     }
+  }
 
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
