--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -197,6 +197,17 @@
     ul {
       list-style-position: inside;
     }
+
+    button {
+      small {
+        transition: all .2s linear;
+      }
+    }
+
+    button:hover {
+      small {
+        color: #306EFF;
+      }
+    }
   }
 }
-
