--- a/src/app/components/add-document-dialog/add-document-dialog.component.scss
+++ b/src/app/components/add-document-dialog/add-document-dialog.component.scss
@@ -3,9 +3,13 @@
 
   .loading {
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   h3 {
